k8s/apps/_retired/mirakurun/bbc/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/starrybluesky/mirakurun-custom:master@sha256:733044872b9508f9a6b7f1b7b26d2da4663d507951142afd3ac645a33727a7d5
          ports:
            - containerPort: 40772
          volumeMounts:
            - name: data
              mountPath: /var/db/mirakurun
            - name: config
              mountPath: /etc/mirakurun
              readOnly: true
            - name: dev-px4video0
              mountPath: /dev/px4video0
            - name: dev-px4video1
              mountPath: /dev/px4video1
            - name: dev-px4video2
              mountPath: /dev/px4video2
            - name: dev-px4video3
              mountPath: /dev/px4video3
          resources:
            limits:
              memory: 2Gi
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
                - SYS_NICE
            privileged: true
      volumes:
        - name: data
          hostPath:
            path: /mnt/local/mirakurun/bbc/data
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /mnt/local/mirakurun/bbc/config
            type: Directory
        - name: dev-px4video0
          hostPath:
            path: /dev/px4video0
            type: CharDevice
        - name: dev-px4video1
          hostPath:
            path: /dev/px4video1
            type: CharDevice
        - name: dev-px4video2
          hostPath:
            path: /dev/px4video2
            type: CharDevice
        - name: dev-px4video3
          hostPath:
            path: /dev/px4video3
            type: CharDevice
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        seccompProfile:
          type: RuntimeDefault
