k8s/apps/_retired/mirakurun/bbc/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default
  type: NodePort
  ports:
    - name: "40772"
      port: 40772
      targetPort: 40772
      nodePort: 30772
      protocol: TCP
