k8s/apps/_retired/mirakurun/bbc/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - name: app
          port: 40772
      middlewares:
        - name: mirakurun-bbc-basic-auth

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mirakurun-bbc-basic-auth

spec:
  basicAuth:
    realm: Access Restricted
    removeHeader: true
    secret: basic-auth-credential
